Revert "UIP-2144: Updated Webpack, Babel, and Core-JS"
This reverts commit d33b13abfcad80a596875430d42c16b04241513e.

Change-Id: I6f94ca4e49606e53ccdf1b60fb180f01b3c3b11a

--- a/packages/ui-library/.babelrc
+++ b/packages/ui-library/.babelrc
@@ -1,32 +1,12 @@
 {
-    "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "modules": "commonjs"
-            },
-        ],
-        "@babel/preset-react"
+	"presets": [
+        "env",
+        "react"
     ],
     "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        [
-            "transform-es2015-spread",
-            {
-                "loose": true
-            }
-        ],
-        [
-            "add-module-exports",
-            {
-                "addDefaultProperty": true
-            }
-        ],
-        [
-            "@babel/plugin-transform-runtime",
-            {
-                "corejs": 3
-            }
-        ]
-    ],
+        "transform-runtime",
+        "transform-class-properties",
+        "transform-object-rest-spread",
+		"add-module-exports"
+    ]
 }
