--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -16,15 +16,13 @@
     "url": "https://hg-od01.corp.pingidentity.com/r/gitweb?p=ui-library.git;a=tree;h=HEAD;hb=HEAD"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.0",
-    "@babel/runtime": "^7.4.2",
-    "@babel/runtime-corejs3": "^7.4.2",
     "@pingone/net": "0.1.3",
+    "babel-runtime": "6.26.0",
     "classnames": "1.2.1",
     "clipboard-polyfill": "2.4.7",
     "clone": "1.0.2",
     "color": "3.1.0",
-    "core-js": "^3.0.0",
+    "core-js": "2.5.1",
     "exif-js": "2.1.1",
     "fbjs": "0.4.0",
     "fix-orientation": "0.0.2",
@@ -49,27 +47,23 @@
     "validator": "5.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-external-helpers": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
     "acorn": "^6.0.4",
+    "babel-cli": "~6.26.0",
+    "babel-core": "6.26.0",
     "babel-eslint": "8.0.1",
-    "babel-jest": "^24.5.0",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "babel-loader": "6.4.1",
+    "babel-plugin-add-module-exports": "~0.2.1",
+    "babel-plugin-external-helpers": "~6.22.0",
+    "babel-plugin-transform-class-properties": "~6.24.1",
+    "babel-plugin-transform-object-rest-spread": "~6.26.0",
+    "babel-plugin-transform-runtime": "~6.23.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
     "chalk": "1.1.3",
     "clean-webpack-plugin": "0.1.8",
-    "copy-webpack-plugin": "5.0.1",
+    "copy-webpack-plugin": "1.1.1",
     "create-react-class": "^15.6.3",
-    "css-loader": "^2.1.1",
+    "css-loader": "0.23.1",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "es6-promise": "3.2.1",
@@ -79,7 +73,7 @@
     "eslint-plugin-react": "4.1.0",
     "eslint-plugin-react-15": "file:./src/eslintrules",
     "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "^3.0.1",
+    "file-loader": "0.8.5",
     "gulp": "~3.9.1",
     "gulp-babel": "~7.0.0",
     "gulp-debug": "~3.1.0",
@@ -91,11 +85,11 @@
     "gulp-tap": "~1.0.1",
     "history": "~4.7.2",
     "html-loader": "~0.5.1",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "2.9.0",
     "http-server": "0.9.0",
     "isomorphic-fetch": "~2.2.1",
     "jasmine": "2.4.1",
-    "jest-cli": "^24.5.0",
+    "jest-cli": "~23.6.0",
     "jsdoc": "3.5.5",
     "jsdoc-babel": "~0.3.0",
     "jsdoc-jsx": "0.1.0",
@@ -106,7 +100,6 @@
     "marked": "0.3.5",
     "mdx-loader": "1.x",
     "mdxc": "^1.x",
-    "mini-css-extract-plugin": "^0.5.0",
     "node-fetch": "~2.1.2",
     "node-sass": "4.10.0",
     "object-assign": "4.0.1",
@@ -125,8 +118,8 @@
     "redux-thunk": "1.0.0",
     "rimraf": "2.5.2",
     "run-sequence": "~2.2.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "sass-loader": "3.1.2",
+    "style-loader": "0.13.0",
     "stylelint": "7.0.2",
     "stylelint-config-standard": "11.0.0",
     "tty-table": "1.0.7",
@@ -137,10 +130,8 @@
     "wdio-junit-reporter": "^0.4.4",
     "wdio-static-server-service": "^1.0.1",
     "webdriverio": "^4.14.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "^4.2.1"
+    "webpack": "1.12.14",
+    "webpack-dev-server": "1.14.1"
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
@@ -178,11 +169,12 @@
     ]
   },
   "scripts": {
-    "pack": "webpack --progress --colors --config webpack.prod.js",
+    "pack": "webpack --progress --colors --config webpack.config.js",
     "package-library": "gulp package-lib",
-    "pack-landing": "webpack --progress --colors --config webpack.landing.js",
-    "webpack-start-landing": "webpack-dev-server --content-base hosting/ -d --hot --port 8082 --host 0.0.0.0 --inline --progress --colors --config webpack.landing.js",
-    "webpack-start": "webpack-dev-server -d --hot --host 0.0.0.0 --inline --progress --colors --config webpack.dev.js",
+    "package-index": "gulp package-index",
+    "pack-landing": "webpack --progress --colors --config webpack.landing.config.js",
+    "webpack-start-landing": "webpack-dev-server --content-base hosting/ -d --hot --port 8082 --host 0.0.0.0 --inline --progress --colors --config webpack.landing.config.js",
+    "webpack-start": "webpack-dev-server -d --hot --host 0.0.0.0 --inline --progress --colors --config webpack.dev.config.js",
     "start": "npm run doc && npm run webpack-start",
     "start-w-doc": "npm run doc && npm run webpack-start",
     "doc": "jsdoc -c ./jsdoc.json",
