UIP-2284 added more cards to dashboard template and created selenium tests
Change-Id: I9e0ac601a9910059cebf654a95b835f889c61866

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -182,7 +182,7 @@ log-config:
 
 install-node-npm:
 	npm cache clean --force
-	npm install --no-shrinkwrap --update-binary
+	npm install
 	npm rebuild node-sass
 
 clean-mvn:
