Not allowed to declare fiels outside our workspace in jenkins so just specify the settings location manually
Change-Id: Ica77ce79e7415d91be8fe82400602cb09b33a35e

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -147,7 +147,8 @@ define deploy
 		-DuniqueVersion=false \
 		-Dpackaging=tar.gz \
 		-DrepositoryId=art01 \
-		-Durl=https://art01.corp.pingidentity.com/artifactory/inhouse
+		-Durl=https://art01.corp.pingidentity.com/artifactory/inhouse \
+		-s settings.xml
 endef
 
 define deploy_coverage
@@ -159,7 +160,8 @@ define deploy_coverage
 		-DuniqueVersion=false \
 		-Dpackaging=tar.gz \
 		-DrepositoryId=art01 \
-		-Durl=https://art01.corp.pingidentity.com/artifactory/inhouse
+		-Durl=https://art01.corp.pingidentity.com/artifactory/inhouse \
+		-s settings.xml
 endef
 
 define install_reference_coverage_report
