--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -40,7 +40,7 @@
     "prop-types": "^15.5.7",
     "raf": "3.4.0",
     "re-mutable": "1.1.1",
-    "react-color": "2.13.8",
+    "react-color": "^2.17.3",
     "react-dnd": "2.5.4",
     "react-dnd-html5-backend": "2.5.4",
     "react-portal": "4.2.0",
