--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -31,7 +31,6 @@
     "fix-orientation": "0.0.2",
     "focus-visible": "^4.1.5",
     "highlight.js": "^9.13.1",
-    "jest": "^24.7.1",
     "libphonenumber-js": "~1.7.7",
     "moment": "2.22.2",
     "moment-range": "1.0.5",
@@ -72,7 +71,6 @@
     "chalk": "1.1.3",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
-    "connected-react-router": "^6.4.0",
     "create-react-class": "^15.6.3",
     "css-loader": "^2.1.1",
     "enzyme": "3.7.0",
@@ -121,9 +119,8 @@
     "react-dnd-test-backend": "~2.5.4",
     "react-dom": "16.6.0",
     "react-hot-loader": "3.0.0-beta.7",
-    "react-redux": "^6.0.0",
-    "react-router": "4.3.1",
-    "react-router-dom": "^5.0.0",
+    "react-redux": "5.0.6",
+    "react-router": "3.2.0",
     "react-router-redux": "4.0.2",
     "react-test-renderer": "~16.0.0",
     "redux": "3.0.5",
