--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -88,10 +88,11 @@ ifneq ($(COVERAGE_STATUS_CODE),200)
 	COVERAGE_STATUS_CODE=$(shell curl -s -I $(COVERAGE_ADDRESS)/$(COVERAGE_VERSION)/ui-library-coverage-$(COVERAGE_VERSION).tar.gz | grep "HTTP/1.1" | awk {'print $$2'})
 endif
 
-
+# GERRIT_SSH_KEY_PATH variable will be passed in from the command line, see Jenkinsfile.release for example
 define version_and_tag
 	sed -e 's/"version"[[:space:]]*:[[:space:]]*"[^"]*"/"version": "$(1)"/' package.json > package.json.tmp
 	mv package.json.tmp package.json
+	export GIT_SSH_COMMAND="ssh -i ${GERRIT_SSH_KEY_PATH}"
 	git commit -a -m $(2)
 	if [[ "$(1)" = "$(GIT_VERSION_FINAL)" ]]; then \
 		git tag $(GIT_VERSION_FINAL); \
