UIP-2623: Error should be on entire Unit Input component
Change-Id: Id3522a499e7b99fe36f738094b80afe69ec29054

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -205,7 +205,8 @@
     "compile-sass": "node ./compile-sass.js",
     "generate-release-notes": "node ./generateReleaseNotes.js",
     "generate-template-dictionary": "node ./generate-template-dictionary",
-    "check-licenses": "license-checker --production --excludePackages '@pingone/net@0.1.3' --onlyAllow 'MIT;BSD-3-Clause;Apache-2.0;BSD-2-Clause;ISC;Public Domain'"
+    "check-licenses": "license-checker --production --excludePackages '@pingone/net@0.1.3' --onlyAllow 'MIT;BSD-3-Clause;Apache-2.0;BSD-2-Clause;ISC;Public Domain'",
+    "lint": "npm run jslint && npm run stylelint"
   },
   "csrfDataSourceApiConfig": {}
 }
