UIP-2634: Added jest snapshots to check for changes in data-id's
Change-Id: I2cffcf91cdee49695306a20c5a759f7130d9aeb0

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -101,7 +101,7 @@ define version_and_tag
 endef
 
 define run_coverage
-	npm run coverage
+	npm run coverage-ci
 	rm -rf $$TMPDIR/jest_preprocess_cache
 endef
 
