UIP-2691 Add license checker to keep bad licenses out of our production dependencies
Change-Id: Iefa6156b327bd419809e085c32b1d671815a7705

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -201,6 +201,7 @@ install-mvn: clean-mvn
 verify: install-node-npm
 	npm run jslint
 	npm run stylelint
+	npm run check-licenses
 	$(call run_coverage)
 
 	# convert the lcov report to cobertura format to be published by Jenkins
