--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -42,7 +42,7 @@
     "react-dnd": "2.5.4",
     "react-dnd-html5-backend": "2.5.4",
     "react-portal": "4.2.0",
-    "react-tooltip": "3.8.4",
+    "react-tooltip": "^3.10.0",
     "recharts": "1.5.0",
     "reselect": "2.5.1",
     "underscore": "1.8.3",
@@ -103,6 +103,7 @@
     "jsdoc-jsx": "0.1.0",
     "json-loader": "0.5.4",
     "lcov-parse": "0.0.10",
+    "license-checker": "^25.0.1",
     "markdown-loader": "~2.0.1",
     "markdown-to-jsx": "~5.4.2",
     "marked": "0.3.5",
@@ -202,7 +203,8 @@
     "clean-selenium-log": "node ./clean-selenium-log.js",
     "compile-sass": "node ./compile-sass.js",
     "generate-release-notes": "node ./generateReleaseNotes.js",
-    "generate-template-dictionary": "node ./generate-template-dictionary"
+    "generate-template-dictionary": "node ./generate-template-dictionary",
+    "check-licenses": "license-checker --production --excludePackages '@pingone/net@0.1.3' --onlyAllow 'MIT;BSD-3-Clause;Apache-2.0;BSD-2-Clause;ISC;Public Domain'"
   },
   "csrfDataSourceApiConfig": {}
 }
