--- a/packages/ui-library/.eslintrc
+++ b/packages/ui-library/.eslintrc
@@ -71,7 +71,7 @@
 		],
 		"new-parens": [2],
 		"no-undef": [2],
-		"no-unused-vars": [2],
+		"no-unused-vars": [2, {"ignoreRestSiblings": true}],
 		"camelcase": [
 			2,
 			{
