revert bad release commits and update snapshot for ci
Change-Id: I540a9702ce2df4fe35131aa98ff63d5539b011b9

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -259,7 +259,7 @@ clean-css:
 
 # package the module and name the file to include the current version
 package: install-mvn install-node-npm clean-css
-	# $(call run_coverage)
+	$(call run_coverage)
 
 	$(call package,$(PACKAGE_VERSION))
 	$(call package_coverage,$(PACKAGE_VERSION))
