--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-library",
-  "version": "3.54.0-SNAPSHOT",
+  "version": "3.51.0-SNAPSHOT",
   "description": "A UI library made of reusable React components, util functions and static assets (including CSS, Fonts, and Icons)",
   "author": "UX Front-End Development Team",
   "license": "ISC",
@@ -196,7 +196,7 @@
     "stylelint": "stylelint \"src/css/**/*.scss\" --config ./.stylelintrc --syntax scss",
     "jest": "jest && node ./clean-after.js",
     "coverage": "jest --coverage && node ./clean-after.js",
-    "coverage-ci": "jest --coverage --ci && node ./clean-after.js",
+    "coverage-ci": "jest --coverage --updateSnapshot && node ./clean-after.js",
     "test": "jest",
     "verify": "npm run jslint && npm run stylelint && npm run test",
     "integration": "wdio wdio.conf.js",
