--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -93,10 +93,10 @@ define version_and_tag
 	sed -e 's/"version"[[:space:]]*:[[:space:]]*"[^"]*"/"version": "$(1)"/' package.json > package.json.tmp
 	mv package.json.tmp package.json
 	git commit -a -m $(2)
-	if [[ "$(1)" = "$(GIT_VERSION_FINAL)" ]]; then \
-		# git tag $(GIT_VERSION_FINAL);
-		GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no -i ${GERRIT_SSH_KEY_PATH}" git push origin $(GIT_VERSION_FINAL); \
-	fi
+	# if [[ "$(1)" = "$(GIT_VERSION_FINAL)" ]]; then \
+	# 	git tag $(GIT_VERSION_FINAL); \
+	# 	GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no -i ${GERRIT_SSH_KEY_PATH}" git push origin $(GIT_VERSION_FINAL); \
+	# fi
 	GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no -i ${GERRIT_SSH_KEY_PATH}" git push origin $(GIT_BRANCH)
 endef
 
