--- a/packages/end-user/.gitlab-ci.yml
+++ b/packages/end-user/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: node:latest
+image: node:8
 
 stages:
   - build
@@ -9,8 +9,6 @@ cache:
     - node_modules/
 
 install_dependencies:
-  tags:
-  - shared
   stage: build
   script:
     - npm install
@@ -19,7 +17,5 @@ install_dependencies:
       - node_modules/
 
 testing_testing:
-  tags:
-  - shared
   stage: test
   script: npm run build
