--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -96,6 +96,7 @@
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "~2.2.1",
     "jasmine": "2.4.1",
+    "jest": "^24.9.0",
     "jest-cli": "^24.5.0",
     "jsdoc": "3.6.1",
     "jsdoc-babel": "^0.5.0",
