No path seperator

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: node:8
 cache:
   paths:
     - node_modules/
-    - "packages/*/node_modules/"
+    - "packages/*/node_modules"
 
 stages:
   - build
