--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -193,9 +193,9 @@
     "test-w-docker": "./node_modules/.bin/wdio wdio.dev.conf.js",
     "jslint": "eslint --ext .js,.jsx .",
     "stylelint": "stylelint \"src/css/**/*.scss\" --config ./.stylelintrc --syntax scss",
-    "jest": "jest && node ./clean-after.js",
-    "coverage": "jest --coverage && node ./clean-after.js",
-    "coverage-ci": "jest --coverage --ci && node ./clean-after.js",
+    "jest": "jest --silent && node ./clean-after.js",
+    "coverage": "jest --coverage --silent && node ./clean-after.js",
+    "coverage-ci": "jest --coverage --ci --silent && node ./clean-after.js",
     "test": "jest",
     "verify": "npm run jslint && npm run stylelint && npm run test",
     "integration": "wdio wdio.conf.js",
