--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -80,7 +80,7 @@
     "eslint-loader": "1.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "4.1.0",
-    "eslint-plugin-react-15": "file:./packages/ui-library/src/eslintrules",
+    "eslint-plugin-react-15": "file:./src/eslintrules",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "^3.0.1",
     "gulp": "~3.9.1",
