Removed "untracked" cache

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,7 @@
 image: node:8
 
 cache:
-  untracked: true
-  key: "$CI_BUILD_REF_NAME"
+  key: "$CI_COMMIT_REF_SLUG"
   paths:
   - node_modules/
   - packages/ui-library/node_modules/
