--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -89,7 +89,6 @@
     "gulp-rename": "^1.4.0",
     "gulp-revert-path": "~1.2.1",
     "gulp-sass": "3.1.0",
-    "gulp-sourcemaps": "^2.6.5",
     "gulp-tap": "~1.0.1",
     "history": "~4.7.2",
     "html-loader": "~0.5.1",
@@ -171,7 +170,7 @@
     "postintegration": "npm run clean-processes",
     "clean-screenshots": "node ./clean-screenshot.js",
     "clean-selenium-log": "node ./clean-selenium-log.js",
-    "build-css": "gulp build-css --destination build-css/css",
+    "compile-sass": "node ./compile-sass.js",
     "generate-release-notes": "node ./generateReleaseNotes.js",
     "generate-template-dictionary": "node ./generate-template-dictionary",
     "check-licenses": "license-checker --production --excludePackages '@pingone/net@0.1.3' --onlyAllow 'MIT;BSD-3-Clause;Apache-2.0;BSD-2-Clause;ISC;Public Domain'",
