--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -17,36 +17,36 @@
     "url": "https://hg-od01.corp.pingidentity.com/r/gitweb?p=ui-library.git;a=tree;h=HEAD;hb=HEAD"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.0",
-    "@babel/runtime": "^7.4.2",
-    "@babel/runtime-corejs3": "^7.4.2",
-    "classnames": "1.2.1",
-    "clipboard-polyfill": "2.4.7",
-    "clone": "1.0.2",
-    "color": "3.1.0",
-    "core-js": "^3.0.1",
-    "exif-js": "2.1.1",
-    "fbjs": "0.4.0",
+    "@babel/polyfill": "~7.6.0",
+    "@babel/runtime": "~7.6.2",
+    "@babel/runtime-corejs3": "^7.6.2",
+    "classnames": "~1.2.1",
+    "clipboard-polyfill": "~2.4.7",
+    "clone": "~1.0.2",
+    "color": "~3.1.0",
+    "core-js": "~3.2.1",
+    "exif-js": "~2.1.1",
+    "fbjs": "~0.4.0",
     "fix-orientation": "0.0.2",
-    "highlight.js": "^9.13.1",
-    "libphonenumber-js": "~1.7.7",
-    "moment": "2.22.2",
-    "moment-range": "1.0.5",
-    "moment-timezone": "0.5.5",
-    "popper.js": "1.14.7",
-    "prop-types": "^15.5.7",
-    "raf": "3.4.0",
+    "highlight.js": "~9.15.10",
+    "libphonenumber-js": "~1.7.25",
+    "moment": "~2.22.2",
+    "moment-range": "~1.0.5",
+    "moment-timezone": "~0.5.5",
+    "popper.js": "~1.14.7",
+    "prop-types": "~15.5.7",
+    "raf": "~3.4.0",
     "re-mutable": "1.1.1",
-    "react-color": "2.13.0",
-    "react-dnd": "2.5.4",
-    "react-dnd-html5-backend": "2.5.4",
-    "react-portal": "4.2.0",
-    "react-tooltip": "^3.10.0",
-    "recharts": "1.5.0",
-    "reselect": "2.5.1",
-    "underscore": "1.8.3",
-    "uuid": "2.0.3",
-    "validator": "5.2.0"
+    "react-color": "~2.13.0",
+    "react-dnd": "~2.5.4",
+    "react-dnd-html5-backend": "~2.5.4",
+    "react-portal": "~4.2.0",
+    "react-tooltip": "~3.11.1",
+    "recharts": "~1.5.0",
+    "reselect": "~2.5.1",
+    "underscore": "~1.8.3",
+    "uuid": "~2.0.3",
+    "validator": "~5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
