--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -82,10 +82,10 @@
     "eslint-plugin-react-15": "file:./src/eslintrules",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "^3.0.1",
-    "gulp": "~3.9.1",
+    "gulp": "^4.0.2",
     "gulp-babel": "~8.0.0",
     "gulp-debug": "~3.1.0",
-    "gulp-flatten": "~0.3.1",
+    "gulp-flatten": "^0.4.0",
     "gulp-rename": "^1.4.0",
     "gulp-revert-path": "~1.2.1",
     "gulp-sass": "3.1.0",
@@ -94,18 +94,18 @@
     "html-loader": "~0.5.1",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "~2.2.1",
-    "jasmine": "2.4.1",
+    "jasmine": "^3.5.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.5.0",
-    "jsdoc": "3.6.1",
+    "jsdoc": "^3.6.3",
     "jsdoc-babel": "^0.5.0",
     "jsdoc-jsx": "0.1.0",
     "json-loader": "0.5.4",
     "lcov-parse": "0.0.10",
     "license-checker": "^25.0.1",
-    "markdown-loader": "~2.0.1",
+    "markdown-loader": "^5.1.0",
     "markdown-to-jsx": "~5.4.2",
-    "marked": "0.3.5",
+    "marked": "^0.7.0",
     "mdx-loader": "1.x",
     "mdxc": "^1.x",
     "mini-css-extract-plugin": "^0.5.0",
@@ -132,7 +132,7 @@
     "stylelint": "7.0.2",
     "stylelint-config-standard": "11.0.0",
     "tty-table": "1.0.7",
-    "url-loader": "0.5.7",
+    "url-loader": "^2.2.0",
     "wdio": "^3.0.0",
     "wdio-docker-service": "^1.5.0",
     "wdio-jasmine-framework": "^0.3.7",
