--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -17,36 +17,36 @@
     "url": "https://hg-od01.corp.pingidentity.com/r/gitweb?p=ui-library.git;a=tree;h=HEAD;hb=HEAD"
   },
   "dependencies": {
-    "@babel/polyfill": "~7.6.0",
-    "@babel/runtime": "~7.6.2",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/runtime": "^7.6.2",
     "@babel/runtime-corejs3": "^7.6.2",
-    "classnames": "~1.2.1",
-    "clipboard-polyfill": "~2.4.7",
-    "clone": "~1.0.2",
-    "color": "~3.1.0",
-    "core-js": "~3.2.1",
-    "exif-js": "~2.1.1",
-    "fbjs": "~0.4.0",
+    "classnames": "^1.2.1",
+    "clipboard-polyfill": "^2.4.7",
+    "clone": "^1.0.2",
+    "color": "^3.1.0",
+    "core-js": "^3.2.1",
+    "exif-js": "^2.1.1",
+    "fbjs": "^0.4.0",
     "fix-orientation": "0.0.2",
-    "highlight.js": "~9.15.10",
-    "libphonenumber-js": "~1.7.25",
-    "moment": "~2.22.2",
-    "moment-range": "~1.0.5",
-    "moment-timezone": "~0.5.5",
-    "popper.js": "~1.14.7",
-    "prop-types": "~15.5.7",
-    "raf": "~3.4.0",
+    "highlight.js": "^9.15.10",
+    "libphonenumber-js": "^1.7.25",
+    "moment": "^2.22.2",
+    "moment-range": "^1.0.5",
+    "moment-timezone": "^0.5.5",
+    "popper.js": "^1.14.7",
+    "prop-types": "^15.5.7",
+    "raf": "^3.4.0",
     "re-mutable": "1.1.1",
-    "react-color": "~2.13.0",
-    "react-dnd": "~2.5.4",
-    "react-dnd-html5-backend": "~2.5.4",
-    "react-portal": "~4.2.0",
-    "react-tooltip": "~3.11.1",
-    "recharts": "~1.5.0",
-    "reselect": "~2.5.1",
-    "underscore": "~1.8.3",
-    "uuid": "~2.0.3",
-    "validator": "~5.2.0"
+    "react-color": "^2.13.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
+    "react-portal": "^4.2.0",
+    "react-tooltip": "^3.11.1",
+    "recharts": "^1.5.0",
+    "reselect": "^2.5.1",
+    "underscore": "^1.8.3",
+    "uuid": "^2.0.3",
+    "validator": "^5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -81,17 +81,17 @@
     "eslint-plugin-react-15": "file:./src/eslintrules",
     "file-loader": "^3.0.1",
     "gulp": "^4.0.2",
-    "gulp-babel": "~8.0.0",
-    "gulp-debug": "~3.1.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-debug": "^3.1.0",
     "gulp-flatten": "^0.4.0",
     "gulp-rename": "^1.4.0",
-    "gulp-revert-path": "~1.2.1",
+    "gulp-revert-path": "^1.2.1",
     "gulp-sass": "3.1.0",
-    "gulp-tap": "~1.0.1",
-    "history": "~4.7.2",
-    "html-loader": "~0.5.1",
+    "gulp-tap": "^1.0.1",
+    "history": "^4.7.2",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^3.2.0",
-    "isomorphic-fetch": "~2.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "jasmine": "^3.5.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.5.0",
@@ -102,29 +102,29 @@
     "lcov-parse": "0.0.10",
     "license-checker": "^25.0.1",
     "markdown-loader": "^5.1.0",
-    "markdown-to-jsx": "~5.4.2",
+    "markdown-to-jsx": "^5.4.2",
     "marked": "^0.7.0",
     "mdx-loader": "1.x",
     "mdxc": "^1.x",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-fetch": "~2.1.2",
+    "node-fetch": "^2.1.2",
     "node-sass": "4.10.0",
     "object-assign": "4.0.1",
     "process": "0.11.2",
     "q": "1.4.1",
     "react": "16.6.0",
     "react-addons-test-utils": "16.0.0-alpha.3",
-    "react-dnd-test-backend": "~2.5.4",
+    "react-dnd-test-backend": "^2.5.4",
     "react-dom": "16.6.0",
     "react-hot-loader": "3.0.0-beta.7",
     "react-redux": "5.0.6",
     "react-router": "3.2.0",
     "react-router-redux": "4.0.2",
-    "react-test-renderer": "~16.0.0",
+    "react-test-renderer": "^16.0.0",
     "redux": "3.0.5",
     "redux-thunk": "1.0.0",
     "rimraf": "2.5.2",
-    "run-sequence": "~2.2.0",
+    "run-sequence": "^2.2.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "7.0.2",
