Prefix end-user tagging

--- a/packages/end-user/Makefile
+++ b/packages/end-user/Makefile
@@ -51,7 +51,7 @@ define package_css
 endef
 
 define tag
-	git tag $(GIT_VERSION)
+	git tag end-user-$(GIT_VERSION)
 	git commit -a -m "Release end-user"
 	GIT_SSH_COMMAND="ssh -o StrictHostKeyChecking=no -i ${GERRIT_SSH_KEY_PATH}" git push origin $(GIT_BRANCH)
 endef
