Remove makefile and move logic to gulpfile update and clean up jenkinsfile

--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "fancy-log": "^1.3.3",
     "file-loader": "^1.1.6",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -143,9 +144,7 @@
     "start": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint src/** && stylelint src/**/*.scss",
     "doc": "jsdoc -c ./jsdoc.json",
-    "host": "npm run static && chmod 600 ./hosting/FARM-33-341f336d.us-west-2.pem && scp -i ./hosting/FARM-33-341f336d.us-west-2.pem static/* ubuntu@uilibrary.ping-eng.com:/var/www/html/end-user",
-    "build-dist": "gulp build-dist",
-    "build": "npm run static && npm run build-dist",
+    "dist": "npm run static && gulp dist",
     "prepublishOnly": "[[ \"$PWD\" =~ ./dist ]]",
     "jest": "jest",
     "test": "jest",
