--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -170,7 +170,7 @@
       "/dist/",
       "/src/selenium/tests",
       "commonTests.js?(x)"
-    ],
+  ],
     "modulePathIgnorePatterns": [
       "/node/",
       "/build/",
@@ -178,7 +178,8 @@
     ],
     "setupFiles": [
       "<rootDir>/src/util/polyfills.js",
-      "<rootDir>/src/devUtil/enzymeSetup.js"
+      "<rootDir>/src/devUtil/enzymeSetup.js",
+      "<rootDir>/src/devUtil/jestSetup.js"
     ]
   },
   "scripts": {
