--- a/packages/end-user/.gitignore
+++ b/packages/end-user/.gitignore
@@ -1,5 +1,5 @@
 # npm / yarn
-node_modules/
+node_modules
 npm-debug.log
 package-lock.json
 yarn.lock
@@ -16,4 +16,4 @@ static
 **/.DS_Store
 
 # JSDoc
-build-doc/
+build-doc
