Update webpack cdn for version and add slack to jenkinsfile

--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -140,11 +140,11 @@
   },
   "scripts": {
     "static": "rm -rf ./static && webpack --config webpack.static.js",
-    "cdn": "rm -rf ./cdn && webpack --config webpack.cdn.js && cp -R ./src/icons/. ./cdn/icons/",
+    "cdn": "rm -rf ./cdn && webpack --config webpack.cdn.js && cp -R ./src/icons/. ./cdn/*/icons",
     "start": "webpack-dev-server --config webpack.dev.js",
     "lint": "eslint src/** && stylelint src/**/*.scss",
     "doc": "jsdoc -c ./jsdoc.json",
-    "dist": "gulp build-dist && npm run cdn && cp -R ./cdn/. ./dist/",
+    "dist": "gulp build-dist && npm run cdn && cp -R ./cdn/*/. ./dist/",
     "prepublishOnly": "[[ \"$PWD\" =~ ./dist ]]",
     "jest": "jest",
     "test": "jest",
