--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -68,6 +68,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "backstopjs": "^4.3.2",
     "chalk": "1.1.3",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
@@ -93,6 +94,7 @@
     "gulp-tap": "~1.0.1",
     "history": "~4.7.2",
     "html-loader": "~0.5.1",
+    "http-server": "^0.11.1",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "~2.2.1",
     "jasmine": "2.4.1",
@@ -206,7 +208,10 @@
     "generate-release-notes": "node ./generateReleaseNotes.js",
     "generate-template-dictionary": "node ./generate-template-dictionary",
     "check-licenses": "license-checker --production --excludePackages '@pingone/net@0.1.3' --onlyAllow 'MIT;BSD-3-Clause;Apache-2.0;BSD-2-Clause;ISC;Public Domain'",
-    "lint": "npm run jslint && npm run stylelint"
+    "lint": "npm run jslint && npm run stylelint",
+    "backstop": "backstop test --config ./backstopConfig.js",
+    "backstop-approve": "backstop approve --config ./backstopConfig.js",
+    "backstop-with-server": "npm run pack && (http-server ./build --p 8080 & node ./runBackstopTests.js)"
   },
   "csrfDataSourceApiConfig": {}
 }
