--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: node:8
 
 stages:
   - test
+  - backstop
 
 test:
   stage: test
@@ -10,9 +11,17 @@ test:
   script:
     - cd packages/ui-library
     - npm install
-    - npm run backstop-with-server
     - cd ../end-user
     - npm install
     - cd ../../
     - npm i lerna -g
     - lerna run test
+
+backstop:
+  stage: backstop
+  tags:
+    - platform-build-node-fragment
+  script:
+    - cd packages/ui-library
+    - npm install
+    - npm run backstop-with-server
